--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_sign_in">SignIn</string>
     <string name="createSet">CREATE SET</string>
     <string name="study_set_details" />
+    <string name="action_bar">ACTION BAR</string>
 </resources>
